// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Body tag 1`] = `
<tbody>
  <TableRow
    key="PERSON_0"
  >
    <TableCell
      key="NAME"
    >
      John Smith
    </TableCell>
    <TableCell
      key="ADDRESS"
    >
      123 Adams Drive
    </TableCell>
    <TableCell
      key="PHONE_NUMBER"
    >
      111-222-3333
    </TableCell>
  </TableRow>
  <TableRow
    key="PERSON_1"
  >
    <TableCell
      key="NAME"
    >
      John Smith
    </TableCell>
    <TableCell
      key="ADDRESS"
    >
      123 Adams Drive
    </TableCell>
    <TableCell
      key="PHONE_NUMBER"
    >
      111-222-3333
    </TableCell>
  </TableRow>
</tbody>
`;

exports[`should render Body with multiple rows 1`] = `
<tbody>
  <TableRow
    key="PERSON_0"
  >
    <TableCell
      key="NAME"
    >
      John Smith
    </TableCell>
    <TableCell
      key="ADDRESS"
    >
      123 Adams Drive
    </TableCell>
    <TableCell
      key="PHONE_NUMBER"
    >
      111-222-3333
    </TableCell>
  </TableRow>
  <TableRow
    key="PERSON_1"
  >
    <TableCell
      key="NAME"
    >
      John Smith
    </TableCell>
    <TableCell
      key="ADDRESS"
    >
      123 Adams Drive
    </TableCell>
    <TableCell
      key="PHONE_NUMBER"
    >
      111-222-3333
    </TableCell>
  </TableRow>
</tbody>
`;

exports[`should render Body with no rows 1`] = `<tbody />`;

exports[`should render Body with one row 1`] = `
<tbody>
  <TableRow
    key="PERSON_0"
  >
    <TableCell
      key="NAME"
    >
      John Smith
    </TableCell>
    <TableCell
      key="ADDRESS"
    >
      123 Adams Drive
    </TableCell>
    <TableCell
      key="PHONE_NUMBER"
    >
      111-222-3333
    </TableCell>
  </TableRow>
</tbody>
`;
